Avanzando interfaz de datos de entrada

--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
 
     <div class="container" style="margin-top: 8%;">
 
-
         <div class="row mb-3">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Número de vértices</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="nv" placeholder="" min="0">
+                <input type="number" class="form-control" id="nv" placeholder="" min="0" required>
             </div>
         </div>
         <div class="row mb-3">
             <label for="colFormLabel" class="col-sm-2 col-form-label">Número de Líneas</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="nl" placeholder="">
+                <input type="number" class="form-control" id="nl" placeholder="" required>
             </div>
         </div>
         <div class="row mb-3">
@@ -51,8 +50,8 @@
                 <input type="text" class="form-control" id="nl" placeholder="">
             </div>
         </div>
-
-
+        <div class="separador"></div>
+        <button type="button" class="btn btn-primary" id="btnTrigger">Primary</button>
 
     </div>
 
