--- a/MNII/proyecto/index.html
+++ b/MNII/proyecto/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="font-weight: 800; margin: 4rem 0;">Interpolación de Splines Cúbicos</h1>
+        <h1 style="font-weight: 800; margin: 4rem 0;">Extrapolación y YouTube</h1>
         <!-- <div class="form-group">
             <label for="xValues">Valores de X (separados por comas):</label>
             <input type="text" id="xValues" value="12, 13, 14, 15, 16, 17, 18, 19, 20, 21">
