--- a/MNII/proyecto/index.html
+++ b/MNII/proyecto/index.html
@@ -15,42 +15,31 @@
 <body>
     <div class="container">
         <h1 style="font-weight: 800; margin: 4rem 0;">Extrapolación y YouTube</h1>
-        <!-- <div class="form-group">
-            <label for="xValues">Valores de X (separados por comas):</label>
-            <input type="text" id="xValues" value="12, 13, 14, 15, 16, 17, 18, 19, 20, 21">
-        </div>
-        <div class="form-group">
-            <label for="yValues">Valores de Y (separados por comas):</label>
-            <input type="text" id="yValues" value="37220, 33198, 33943, 36313, 38309, 37689, 37912, 40009, 38641, 38322">
-        </div>
-        <div class="form-group">
-            <label for="xExtrapolate">Valor de X para extrapolación:</label>
-            <input type="number" id="xExtrapolate" value="22">
-        </div> --> 
-        <!-- <form> -->
             <div class="row mb-3">
               <label for="inputEmail3" class="col-sm-2 col-form-label">Valores de X (separados por comas):</label>
               <div class="col-sm-10">
-                <input class="form-control" type="text" id="xValues" value="12, 13, 14, 15, 16, 17, 18, 19, 20, 21">
+                <input class="form-control" type="text" id="xValues" value="17, 18, 19, 20, 21, 22, 23, 24, 25, 26">
               </div>
             </div>
             <div class="row mb-3">
               <label for="inputPassword3" class="col-sm-2 col-form-label">Valores de Y (separados por comas):</label>
               <div class="col-sm-10">
-                <input class="form-control" type="text" id="yValues" value="37220, 33198, 33943, 36313, 38309, 37689, 37912, 40009, 38641, 38322">
+                <input class="form-control" type="text" id="yValues" value="37689, 37912, 40009, 38641, 38322, 42631, 42628, 51482, 56362, 57387">
               </div>
             </div>
             <div class="row mb-3">
                 <label for="inputPassword3" class="col-sm-2 col-form-label">Valor de X para extrapolación:</label>
                 <div class="col-sm-10">
-                  <input class="form-control" type="number" id="xExtrapolate" value="22">
+                  <input class="form-control" type="number" id="xExtrapolate" value="27">
                 </div>
               </div>
           <!-- </form> -->
 
         <button onclick="drawSpline()"type="button" class="btn btn-primary">Generar Gráfico</button>
         <!-- <button onclick="drawPolynomialRegression()">Generar Gráfico</button> -->
+        <div id="expect"></div>
         <div id="plot"></div>
+
     </div>
     <script src="assets/js/splines.js"></script>
     <script src="assets/js/polRegression.js"></script>
