--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
                     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                     <div class="accordion-body" id="matrices">
                         <div class="row">
+                            <h5> <strong>Matriz de Incidencia</strong></h5>
                             <div class="col" id="matriz-In"></div>    
+                            <h5> <strong>Matriz de Adyacencia</strong></h5>
                             <div class="col" id="matriz-Ad"></div>    
+                            <h5> <strong>Matriz de Accesibilidad</strong></h5>
                             <div class="col" id="matriz-Ac"></div>    
                         </div>
                         
@@ -138,12 +141,19 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                        <strong>Líneas Paralelas</strong>
+                        <strong>Información de líneas</strong>
                     </button>
                     </h2>
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                     <div class="accordion-body">
+                        <h5><strong>Lineas Paralelas</strong></h5>
+                        <div id="Lparalelas"></div>
 
+                        <h5><strong>Bucles</strong></h5>
+                        <div id="Lbucles"></div>
+
+                        <h5><strong>Líneas en serie</strong></h5>
+                            <div id="Lserie"></div>
                     </div>
                     </div>
                 </div>
